# stock_bot

./: README.md  main.py  notes.txt  pyproject.toml  todo.txt
cli/: active_cli.py
cli/data/history/: AAPL_2026-02-12.csv
cli/lib/: active_class.py  data_imports.py  indicators.py
data/: test_prices.csv
data/history/: AAPL_2026-02-12.csv
lib/: active_class.py  indicators.py
tests/: temp.py  test_active.py
